<resources>
    <string name="app_name">TPBlocNote</string>
    <string name="boldButton">Gras</string>
    <string name="italicButton">Italique</string>
    <string name="underButton">Souligné</string>
    <string name="blackPolice">Noir</string>
    <string name="bluePolice">Bleu</string>
    <string name="RedPolice">Rouge</string>
    <string name="hideButton">Cacher</string>
    <string name="editTitle">"Édition : "</string>
    <string name="previewTitle">"Prévisualisation : "</string>
</resources>
